update Test_Result/openGauss_3.1.0_preview/CM开放查询和推送能力，支持用户应用、中间件感知当前主备角色.md.
Signed-off-by: houshaolong <1114554340@qq.com>